# bio-association-rule-mining-and-correlation

./: .gitignore  LIBRARY_DESIGN.md  README.md  STRATIFICATION_PLAN.md  WEIGHTED_FP_GROWTH_REQUEST.md  analyze_results.py  commands.md  constants.py  filter_existing_results.py  get_cell.py  llm.md  pyproject.toml  run_association_mining.py  transactions.py  weekly_paper_draft.tex  worker_task.py
algos/: fpgrowth.py  weighted_fpgrowth.py
check_rule_correlation_with_disease/: STRATIFICATION_PLAN.md  advanced_discovery.py  run_correlation_pipeline.py  run_robust_simple_stats.py  stratified_utils.py
data_exploration/: check_cols.py  check_data.ipynb  check_data.py  check_data_bias.py  check_identity.py  data_inspection_report.md  determine_thresholds.ipynb  inspect_columns.py  investigate_mismatch.py
result_exploration/: analyze_ratios.py  check_result_data.ipynb  generate_consensus_tables.py  pipeline_efficiency.py  pipeline_efficiency.txt  pipeline_efficiency_low_threshold.txt  show_negative_rules.py  show_top_rules.py  show_top_rules.txt  understand_specific_rule.ipynb
script_rule_mining.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
utils/: config_validation.py  logging_setup.py  rules.py  spatial.py  stats.py  validation.py
visualization/: plot_benchmark_comparison.py  run_all_visualizations.py  visualize_consensus.py  visualize_dynamic_spatial_evolution.py  visualize_mining_results.py  visualize_ml_heatmaps_all.py  visualize_raw_rules.py  visualize_results.py  visualize_simple_stats_heatmaps.py  visualize_stage_marker_rules.py  (+2 more)
(+33 files in other folders)
